--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	
 		<div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
+            <li class="text-center">
               <a href="#menu_chicken" class="visible-xs">Chicken</a>
             </li>
-            <li>
+            <li class="text-center">
               <a href="#menu_beef" class="visible-xs">Beef</a>
              </li>
-            <li>
+            <li class="text-center">
               <a href="#menu_sushi" class="visible-xs">Sushi</a>
             </li>
            </ul><!-- #nav-list -->
